Task 5/.metals/.reports/metals/2023-10-12/r_scala-toplevel-mtags_20-56-42-532
id: file:///C:/Users/sammy/Downloads/Web%20Apps/Task%205/play-tasks-scohen-trinity/server/app/controllers/TaskList1.scala:[50..51) in Input.VirtualFile("file:///C:/Users/sammy/Downloads/Web%20Apps/Task%205/play-tasks-scohen-trinity/server/app/controllers/TaskList1.scala", "package controllers
package TaskListInMemoryModel._

import javax.inject._

import play.api.mvc._
import play.api.i18n._

@Singleton
class TaskList1 @Inject() (cc: ControllerComponents) extends AbstractController(cc) {

  def login = Action {
    Ok(views.html.login1())
  }

  def validateLoginGet(username: String, password: String) = Action {
    Ok(s"$username logged in with $password")
  }

  def validateLoginPost = Action { request => 
    val postVals = request.body.asFormUrlEncoded
    postVals.map { args => 
      val username = args("username").head
      val password = args("password").head
      if(TaskListInMemoryModel.validateUser(username, password)) {
        Redirect(routes.TaskList1.taskList)
      } else {
        Redirect(routes.TaskList1.login)
      }
      
    }.getOrElse(Redirect(routes.TaskList1.login))
    
  }

  def taskList = Action {
    val tasks = List("task1", "task2", "sleep", "eat")
    Ok(views.html.taskList1(tasks))
  }

}
")
file:///C:/Users/sammy/Downloads/Web%20Apps/Task%205/play-tasks-scohen-trinity/server/app/controllers/TaskList1.scala:2: error: expected identifier; obtained uscore
package TaskListInMemoryModel._
                              ^